--- a/js_class/index.html
+++ b/js_class/index.html
@@ -4,10 +4,59 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style></style>
+    <style>
+      .addClass {
+        background-color: red;
+        color: white;
+      }
+    </style>
   </head>
   <body>
-    <button onclick="alert(new Date())">click me</button>
+    <!-- <button onclick="alert(new Date())">click me</button> -->
+    <button id="btn">click me</button>
+
+    <!-- <div class="class1">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam culpa
+      obcaecati et velit odio nesciunt, illo accusamus tempora, sunt distinctio
+      temporibus consequatur amet neque laudantium aperiam quod, dicta molestiae
+      magni.
+    </div> -->
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt saepe
+      perspiciatis blanditiis ea? Totam accusamus aliquam amet id, quasi
+      inventore quidem temporibus dolor, eius nemo suscipit officiis, odit
+      aperiam quaerat.
+    </p>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt saepe
+      perspiciatis blanditiis ea? Totam accusamus aliquam amet id, quasi
+      inventore quidem temporibus dolor, eius nemo suscipit officiis, odit
+      aperiam quaerat.
+    </p>
+    <p class="class1">
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt saepe
+      perspiciatis blanditiis ea? Totam accusamus aliquam amet id, quasi
+      inventore quidem temporibus dolor, eius nemo suscipit officiis, odit
+      aperiam quaerat.
+    </p>
+
+    <section id="id1">
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur
+      distinctio neque cum autem inventore. Vitae, sit ab architecto repudiandae
+      labore aperiam pariatur exercitationem suscipit praesentium, quasi
+      blanditiis officiis veniam a.
+    </section>
+
+    <form action="">
+      <h1 id="h1">Form Field</h1>
+      <label for="name">Name</label>
+      <input type="text" id="name" name="name" />
+
+      <label for="email">Email</label>
+      <input type="email" id="email" name="email" />
+
+      <button>submit</button>
+    </form>
 
     <!-- <script>
       alert("hello world");
