--- a/js_class/index.html
+++ b/js_class/index.html
@@ -9,6 +9,19 @@
         background-color: red;
         color: white;
       }
+      form input,
+      form button {
+        width: 100%;
+        padding: 5px;
+        margin-bottom: 10px;
+      }
+      .msg {
+        margin-bottom: 10px;
+        border: 1px solid;
+        padding: 5px;
+        border-radius: 3px;
+        display: none;
+      }
     </style>
   </head>
   <body>
@@ -21,7 +34,7 @@
       temporibus consequatur amet neque laudantium aperiam quod, dicta molestiae
       magni.
     </div> -->
-    <p>
+    <!-- <p>
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt saepe
       perspiciatis blanditiis ea? Totam accusamus aliquam amet id, quasi
       inventore quidem temporibus dolor, eius nemo suscipit officiis, odit
@@ -45,10 +58,11 @@
       distinctio neque cum autem inventore. Vitae, sit ab architecto repudiandae
       labore aperiam pariatur exercitationem suscipit praesentium, quasi
       blanditiis officiis veniam a.
-    </section>
+    </section> -->
 
-    <form action="">
+    <form action="" id="form">
       <h1 id="h1">Form Field</h1>
+      <div class="msg">asdfghjkl</div>
       <label for="name">Name</label>
       <input type="text" id="name" name="name" />
 
